# goit-pythonweb-hw-10

./: .dockerignore  .env.example  Dockerfile  Dockerfile.fat  README.md  cors-check.sh  diff.txt  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  seed_db.sh
alembic/: env.py
alembic/versions/: 002869cf0761_add_to_model_user_filed_confirmed.py  313c4b992561_initial_migration.py  531375798cac_add_server_default_to_created_at.py  79446c36861e_update_user_model_to_mapped.py  af00d2dc2703_add_user.py  be12831008ae_update_table_relations.py
src/api/: auth.py  contact_api.py  health.py  users.py
src/config/: app_config.py
src/db/: session.py
src/models/: __init__.py  contact.py  user.py
src/repositories/: contact_repository.py  user_repository.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py  upload_file.py  users.py
